Update: update json_api_example

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,12 +6,14 @@ add_subdirectory(include)
 add_subdirectory(src)
 
 file(GLOB INCLUDE_DIRS
+        ${ADDITIONAL_INCLUDE_DIRS}
         ${JWT_INCLUDE_DIRS}
         ${DATABASE_INCLUDE_DIRS}
         ${SERVER_INCLUDE_DIRS}
 )
 
 file(GLOB SOURCE_FILES
+        ${JWT_SOURCE_FILES}
         ${DATABASE_SOURCE_FILES}
         ${SERVER_SOURCE_FILES}
 )
