--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.16)
 project(lib)
 
+file(GLOB JWT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/jwt/*.cpp)
 file(GLOB DATABASE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/database/*.cpp)
 file(GLOB SERVER_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/server/*.cpp)
 
+set(JWT_SOURCE_FILES ${JWT_SOURCE_FILES} PARENT_SCOPE)
 set(DATABASE_SOURCE_FILES ${DATABASE_SOURCE_FILES} PARENT_SCOPE)
 set(SERVER_SOURCE_FILES ${SERVER_SOURCE_FILES} PARENT_SCOPE)
