--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,9 @@ project(lib)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(additional_lib/json)
+add_subdirectory(additional_lib/cpp-jwt)
+
 add_subdirectory(include)
 add_subdirectory(src)
 
@@ -21,7 +24,7 @@ file(GLOB SOURCE_FILES
 add_library(${PROJECT_NAME} ${SOURCE_FILES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME} pqxx pthread)
+target_link_libraries(${PROJECT_NAME} pqxx pthread nlohmann_json::nlohmann_json cpp-jwt::cpp-jwt)
 
 set(CORE_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
 set(CORE_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)
