--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -3,8 +3,10 @@ project(lib)
 
 file(GLOB JWT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/jwt/*.cpp)
 file(GLOB DATABASE_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/database/*.cpp)
+file(GLOB SESSION_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/session/*.cpp)
 file(GLOB SERVER_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/server/*.cpp)
 
 set(JWT_SOURCE_FILES ${JWT_SOURCE_FILES} PARENT_SCOPE)
 set(DATABASE_SOURCE_FILES ${DATABASE_SOURCE_FILES} PARENT_SCOPE)
+set(SESSION_SOURCE_FILES ${SESSION_SOURCE_FILES} PARENT_SCOPE)
 set(SERVER_SOURCE_FILES ${SERVER_SOURCE_FILES} PARENT_SCOPE)
