Fix: fix reading config

--- a/config.cfg
+++ b/config.cfg
@@ -1,25 +1,24 @@
 version = "1.0";
      
-settings:
+application:
 {
     database:
     {
-        host: "",
-        port: "",
-        user: "".
-        password: "",
-        name: "",
-        pool_size: 
+        host = "127.0.0.1";
+        port = "5432";
+        user = "postgres";
+        password = "12345";
+        name = "priority2030";
+        pool_size = 10;
     };
-
     acceptor:
     {
-        port: 
+        port = 4000;
     };
 
     jwt:
     {
-        secret: "",
-        algo : [""]
+        secret = "fewigewnigewjgwoi";
+        algo = ["HS256"];
     };
 };
