--- a/config.cfg
+++ b/config.cfg
@@ -4,21 +4,21 @@ application:
 {
     database:
     {
-        host = "127.0.0.1";
-        port = "5432";
-        user = "postgres";
-        password = "12345";
-        name = "priority2030";
-        pool_size = 10;
+        host = "";
+        port = "";
+        user = "";
+        password = "";
+        name = "";
+        pool_size = ;
     };
     acceptor:
     {
-        port = 4000;
+        port = ;
     };
 
     jwt:
     {
-        secret = "fewigewnigewjgwoi";
-        algo = ["HS256"];
+        secret = "";
+        algo = [""];
     };
 };
