Update: update .gitignore

--- a/config.cfg
+++ b/config.cfg
@@ -4,21 +4,21 @@ application:
 {
     database:
     {
-        host = "";
-        port = "";
-        user = "";
-        password = "";
-        name = "";
-        pool_size = ;
+        host = "127.0.0.1";
+        port = "5432";
+        user = "postgres";
+        password = "12345";
+        name = "priority2030";
+        pool_size = 5;
     };
     acceptor:
     {
-        port = ;
+        port = 4000;
     };
 
     jwt:
     {
-        secret = "";
-        algo = [""];
+        secret = "fteverjvnhwvnwv";
+        algo = ["HS256"];
     };
 };
